# python-template

./: .gitignore  README.md  pixi.toml  pyproject.toml  setup.py  setup.sh
configs/: README.md
data/: README.md
logs/: README.md
results/: README.md
scripts/: README.md
tests/: README.md
