[project]
name = "src"
version = "0.1.0"  # You can specify a version here
description = "Description of your project"
dependencies = []  # Add dependencies if there are any

[build-system] # this is to fix issue with pixi pip install on editable mode
requires = ["hatchling"]
build-backend = "hatchling.build"

